# deckbox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.beads/: metadata.json
.devcontainer/: devcontainer.json
deckbox-cli/: Cargo.toml
deckbox-cli/src/: main.rs
deckbox-cli/tests/: integration.rs
deckbox-core/: Cargo.toml
deckbox-core/src/: definition.rs  error.rs  lib.rs  operations.rs  persistence.rs  session.rs
docs/ios-design/: design-meeting-report.md  game-config-architecture.md
docs/superpowers/plans/: 2026-03-13-deckbox-implementation.md
docs/superpowers/specs/: 2026-03-13-deckbox-design.md
examples/: oracle.yaml  poker.yaml
