[package]
name = "deckbox-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for managing decks of cards with draw-without-replacement semantics"
repository = "https://github.com/snits/deckbox"

[[bin]]
name = "deckbox"
path = "src/main.rs"

[dependencies]
deckbox-core = { path = "../deckbox-core" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
