[package]
name = "deckbox-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for managing decks of cards with draw-without-replacement semantics"
repository = "https://github.com/snits/deckbox"
keywords = ["cards", "deck", "ttrpg", "oracle", "game"]
categories = ["games"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
